<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textElephantPossition"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/sign_out_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/elephant_possition"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textretrievedata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/retrieve_data"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/title_bar_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:background="@color/line" >
        </LinearLayout>

        <TextView
            android:id="@+id/textmap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/map"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/title_bar_back" />
</LinearLayout>
</LinearLayout>